# fastapi-template

./: Makefile  README.rst  docker-compose.yml  pyproject.toml
deploy/dockerfile/: dockerfile.api
fastapi_template/: main.py  manage.py
fastapi_template/api/: events.py  router.py
fastapi_template/api/v1/: router.py
fastapi_template/api/v1/endpoints/: auth.py  depends.py  exmaple.py  user.py
fastapi_template/app/db/: db.py
fastapi_template/cmds/: __init__.py  base.py  dumpdummy.py
fastapi_template/common/: enums.py  exceptions.py  secure.py
fastapi_template/core/: settings.py
fastapi_template/crud/: __init__.py  base.py  user.py
fastapi_template/db/: __init__.py  alembic.py  db.py
fastapi_template/model/: mixins.py  user.py
fastapi_template/schemas/: auth.py  user.py
fastapi_template/services/: auth.py
