[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["theoohoho <topslimer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.70.0"
loguru = "0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "4.0.1"
black = "22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
