[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["theoohoho <topslimer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
loguru = "^0.7.0"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
